Add GET API to retrieve a original URL given a slug
